@@ -5,7 +5,9 @@
 # *** dist' to work properly on Unix machines.
 
 # Makefile for GNU CVS windows-NT dist.
-# Copyright (C) 2000 Free Software Foundation, Inc.
+# Copyright (C) 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994,
+#               1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003
+#               Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
